[package]
name = "polkadot-executor"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Polkadot node implementation in Rust."

[dependencies]
substrate-executor = { git = "https://github.com/gterzian/substrate/", branch="test_protocol_rewrite_on_alexander" }
substrate-primitives = { git = "https://github.com/gterzian/substrate/", branch="test_protocol_rewrite_on_alexander" }
polkadot-runtime = { path = "../runtime" }
