[package]
name = "polkadot-runtime"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
bitvec = { version = "0.8", default-features = false, features = ["alloc"] }
rustc-hex = "1.0"
log = { version = "0.3", optional = true }
serde = { version = "1.0", default-features = false }
serde_derive = { version = "1.0", optional = true }
safe-mix = { version = "1.0", default-features = false}
polkadot-primitives = { path = "../primitives", default-features = false }
parity-codec = "2.1"
parity-codec-derive = "2.1"
substrate-serializer = { git = "https://github.com/gterzian/substrate/", branch="test_protocol_rewrite_on_alexander" }
sr-std = { git = "https://github.com/gterzian/substrate/", branch="test_protocol_rewrite_on_alexander" }
sr-io = { git = "https://github.com/gterzian/substrate/", branch="test_protocol_rewrite_on_alexander" }
srml-support = { git = "https://github.com/gterzian/substrate/", branch="test_protocol_rewrite_on_alexander" }
substrate-primitives = { git = "https://github.com/gterzian/substrate/", branch="test_protocol_rewrite_on_alexander" }
substrate-client = { git = "https://github.com/gterzian/substrate/", branch="test_protocol_rewrite_on_alexander" }
substrate-consensus-aura-primitives = { git = "https://github.com/gterzian/substrate/", branch="test_protocol_rewrite_on_alexander", default-features = false }
srml-aura = { git = "https://github.com/gterzian/substrate/", branch="test_protocol_rewrite_on_alexander" }
srml-balances = { git = "https://github.com/gterzian/substrate/", branch="test_protocol_rewrite_on_alexander" }
srml-consensus = { git = "https://github.com/gterzian/substrate/", branch="test_protocol_rewrite_on_alexander" }
srml-council = { git = "https://github.com/gterzian/substrate/", branch="test_protocol_rewrite_on_alexander" }
srml-democracy = { git = "https://github.com/gterzian/substrate/", branch="test_protocol_rewrite_on_alexander" }
srml-executive = { git = "https://github.com/gterzian/substrate/", branch="test_protocol_rewrite_on_alexander" }
srml-grandpa = { git = "https://github.com/gterzian/substrate/", branch="test_protocol_rewrite_on_alexander" }
srml-indices = { git = "https://github.com/gterzian/substrate/", branch="test_protocol_rewrite_on_alexander" }
sr-primitives = { git = "https://github.com/gterzian/substrate/", branch="test_protocol_rewrite_on_alexander" }
srml-session = { git = "https://github.com/gterzian/substrate/", branch="test_protocol_rewrite_on_alexander" }
srml-staking = { git = "https://github.com/gterzian/substrate/", branch="test_protocol_rewrite_on_alexander" }
srml-sudo = { git = "https://github.com/gterzian/substrate/", branch="test_protocol_rewrite_on_alexander" }
srml-system = { git = "https://github.com/gterzian/substrate/", branch="test_protocol_rewrite_on_alexander" }
srml-timestamp = { git = "https://github.com/gterzian/substrate/", branch="test_protocol_rewrite_on_alexander" }
srml-treasury = { git = "https://github.com/gterzian/substrate/", branch="test_protocol_rewrite_on_alexander" }
srml-upgrade-key = { git = "https://github.com/gterzian/substrate/", branch="test_protocol_rewrite_on_alexander" }
sr-version = { git = "https://github.com/gterzian/substrate/", branch="test_protocol_rewrite_on_alexander" }

[dev-dependencies]
hex-literal = "0.1.0"
substrate-keyring = { git = "https://github.com/gterzian/substrate/", branch="test_protocol_rewrite_on_alexander" }

[features]
default = ["std"]
std = [
	"bitvec/std",
	"polkadot-primitives/std",
	"parity-codec/std",
	"parity-codec-derive/std",
	"substrate-primitives/std",
	"sr-std/std",
	"sr-io/std",
	"srml-support/std",
	"srml-balances/std",
	"srml-consensus/std",
	"srml-council/std",
	"srml-democracy/std",
	"srml-executive/std",
	"srml-grandpa/std",
	"srml-indices/std",
	"sr-primitives/std",
	"srml-session/std",
	"srml-staking/std",
	"srml-sudo/std",
	"srml-system/std",
	"srml-timestamp/std",
	"srml-treasury/std",
	"srml-upgrade-key/std",
	"sr-version/std",
	"serde_derive",
	"serde/std",
	"log",
	"safe-mix/std"
]
