[package]
name = "polkadot-service"
version = "0.3.9"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
parking_lot = "0.4"
error-chain = "0.12"
lazy_static = "1.0"
log = "0.3"
slog = "^2"
tokio = "0.1.7"
hex-literal = "0.1"
polkadot-availability-store = { path = "../availability-store" }
polkadot-consensus = { path = "../consensus" }
polkadot-primitives = { path = "../primitives" }
polkadot-runtime = { path = "../runtime" }
polkadot-executor = { path = "../executor" }
polkadot-network = { path = "../network"  }
sr-io = { git = "https://github.com/gterzian/substrate/", branch="test_protocol_rewrite_on_alexander" }
sr-primitives = { git = "https://github.com/gterzian/substrate/", branch="test_protocol_rewrite_on_alexander" }
substrate-primitives = { git = "https://github.com/gterzian/substrate/", branch="test_protocol_rewrite_on_alexander" }
substrate-client = { git = "https://github.com/gterzian/substrate/", branch="test_protocol_rewrite_on_alexander" }
substrate-consensus-aura = { git = "https://github.com/gterzian/substrate/", branch="test_protocol_rewrite_on_alexander" }
substrate-finality-grandpa = { git = "https://github.com/gterzian/substrate/", branch="test_protocol_rewrite_on_alexander" }
substrate-service = { git = "https://github.com/gterzian/substrate/", branch="test_protocol_rewrite_on_alexander" }
substrate-telemetry = { git = "https://github.com/gterzian/substrate/", branch="test_protocol_rewrite_on_alexander" }
substrate-transaction-pool = { git = "https://github.com/gterzian/substrate/", branch="test_protocol_rewrite_on_alexander" }
